# PDroid

./: .gitignore  PDrolyze Test.ipynb  README.md  api_metadata_w_description.json  cli.py  pyproject.toml  requirements.txt
.ipynb_checkpoints/: PDrolyze Test-checkpoint.ipynb
metadata/: api_metadata.json
pdroid/: APK.py  __init__.py  analyze.py  api_methods.json  cli.py  pdroid.py  utils.py
pdrolyze/: APK.py  analyze.py  api_methods.json  method_to_pi.json  permission_class_mapping.json  utils.py
tests/: test_pdroid.py
