[tool.poetry]
name = "pdroid"
version = "0.3.0"
description = "A python based tool to analyze privacy behaviors of Android app at source code"
authors = ["Vijayanta Jain <vijayantajain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
androguard = "3.4.0a1"
six = "1.16.0"


[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
